# seaplane-demos

./: README.md
docusaurus-chatbot/: README.md  api_requests.py  streamlit_chat.py
docusaurus-chatbot/chatbot/: pyproject.toml
docusaurus-chatbot/chatbot/chatbot/: main.py
docusaurus-chatbot/processor/: pyproject.toml
docusaurus-chatbot/processor/processor/: main.py  processing.py
hello-world/: .env  .gitignore  README.md  pyproject.toml  test.py
hello-world/hello-world/: main.py  test.py
notion-chatbot/: README.md
notion-chatbot/chat-processor/: .env  .gitignore  README.md  pyproject.toml
notion-chatbot/chat-processor/chat-processor/: helper_files.py  main.py  notion_processor.py
notion-chatbot/chatbot/: .env  pyproject.toml
notion-chatbot/chatbot/chatbot/: main.py
pdf-summary/: README.md  pyproject.toml  test.py
pdf-summary/pdf-summary/: database.py  inference.py  main.py  pre_processing.py
