[tool.poetry]
name = "chat-processor"
version = "0.0.1"
description = ""
authors = []

[tool.seaplane]
main = "main.py"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
seaplane = "^0.3.89"
langchain = "0.0.236"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
